--- a/poc-node-init-typescript/package.json
+++ b/poc-node-init-typescript/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/multer": "^1.4.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "knex": "^2.1.0",
+    "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.0.8"
   }
 }
