--- a/poc-react-init/package.json
+++ b/poc-react-init/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
+    "leaflet": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.3.3"
   }
 }
